LLM을 통한 조교구상 응답 받는것까지 구현 일부 함수의 구현 구조를 변경

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -388,7 +388,7 @@
 </div>
 <div class="line single" style="margin-top:1.5rem"></div>
 <p class="total-info" style="margin-top: 1.5rem !important;">
-<strong>다음 레벨까지:</strong> {{? {{array_element::{{getvar::expLv}}::{{dict_element::{{getvar::target}}::레벨}}}}-{{dict_element::{{getvar::target}}::경험치}}}} EXP<br>
+<strong>다음 레벨까지:</strong> {{? {{array_element::{{getvar::Lvtable}}::{{dict_element::{{getvar::target}}::레벨}}}}-{{dict_element::{{getvar::target}}::경험치}}}} EXP<br>
 <strong>총 획득 경험치:</strong> {{dict_element::{{getvar::target}}::경험치}} EXP
 </p>
 </div>
