조교 로그창에서 정규식 없이 바로 로그를 불러오도록 수정

--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -346,7 +346,7 @@ height: 0.6rem;
 <section class="log-panel">
 <h2>* 메시지</h2>
 <div class="log-content">
-§TRAINLOG§
+{{getvar::trainLog}}
 </div>
 </section>
 
