특성 DB 교통정리 성감대 -> 신체특성

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -361,8 +361,8 @@
 {{#when::{{? {{array_length::{{dict_element::{{getvar::target}}::체질}}}}==0}}}}<span class="talent-tag">없음</span>{{:else}}{{#each {{dict_element::{{getvar::target}}::체질}} T}}<span class="talent-tag">[{{slot::T}}]</span>{{/each}}{{/when}}
 <h3>성적취향</h3>
 {{#when::{{? {{array_length::{{dict_element::{{getvar::target}}::성적취향}}}}==0}}}}<span class="talent-tag">없음</span>{{:else}}{{#each {{dict_element::{{getvar::target}}::성적취향}} T}}<span class="talent-tag">[{{slot::T}}]</span>{{/each}}{{/when}}
-<h3>성감대</h3>
-{{#when::{{? {{array_length::{{dict_element::{{getvar::target}}::성감대}}}}==0}}}}<span class="talent-tag">없음</span>{{:else}}{{#each {{dict_element::{{getvar::target}}::성감대}} T}}<span class="talent-tag">[{{slot::T}}]</span>{{/each}}{{/when}}
+<h3>신체특성</h3>
+{{#when::{{? {{array_length::{{dict_element::{{getvar::target}}::신체특성}}}}==0}}}}<span class="talent-tag">없음</span>{{:else}}{{#each {{dict_element::{{getvar::target}}::신체특성}} T}}<span class="talent-tag">[{{slot::T}}]</span>{{/each}}{{/when}}
 </div>
 </div>
 
