--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -433,11 +433,11 @@
 <section class="marks-section">
 <h2>* 각인</h2>
 <div class="marks-grid">
-<div class="mark-item"><span class="bar-label">고통:</span> <div class="star-rating" style="--rating: {{dict_element::{{getvar::target}}::고통각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">쾌락:</span> <div class="star-rating" style="--rating: {{dict_element::{{getvar::target}}::쾌락각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">복종:</span> <div class="star-rating" style="--rating: {{dict_element::{{getvar::target}}::복종각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">수치:</span> <div class="star-rating" style="--rating: {{dict_element::{{getvar::target}}::수치각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">반발:</span> <div class="skull-rating" style="--rating: {{dict_element::{{getvar::target}}::반발각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">고통:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::고통각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">쾌락:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::쾌락각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">복종:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::복종각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">수치:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::수치각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">반발:</span> <div class="mark-rating neg" style="--rating: {{dict_element::{{getvar::target}}::반발각인}}"></div></div>
 </div>
 </section>
 
