모바일 대응 grid UI개선

--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -206,6 +206,9 @@ height: 0.6rem;
         grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr));
         font-size: 0.8rem;
         }
+    .stat-label {
+        font-size: 0.8rem;
+    }
 }
 </style>
 
