치욕각인 용어 오류 수정

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -446,7 +446,7 @@
 <div class="mark-item"><span class="bar-label">고통:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::고통각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">쾌락:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::쾌락각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">복종:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::복종각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">수치:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::수치각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">치욕:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::치욕각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">반발:</span> <div class="mark-rating neg" style="--rating: {{dict_element::{{getvar::target}}::반발각인}}"></div></div>
 </div>
 </section>
