--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -199,7 +199,55 @@ height: 0.6rem;
     margin-bottom: 0;
 }
 
+.loading-container {
+    grid-column: 1 / -1; /* Span all columns in the command-container grid */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem 1rem;
+    color: #ccc;
+    font-family: 'Gulim', monospace;
+    text-align: center;
+    min-height: 80px; /* Ensure it has some height */
+}
 
+.loading-text {
+    font-size: 1.1em;
+    margin-bottom: 1rem;
+}
+
+.loading-dots {
+    display: flex;
+    gap: 0.75rem;
+}
+
+.loading-dots span {
+    width: 12px;
+    height: 12px;
+    background-color: #ffffbf; /* Using a highlight color from the theme */
+    border-radius: 50%;
+    animation: pulse 1.4s infinite ease-in-out both;
+}
+
+.loading-dots .dot-1 {
+    animation-delay: -0.32s;
+}
+
+.loading-dots .dot-2 {
+    animation-delay: -0.16s;
+}
+
+@keyframes pulse {
+    0%, 80%, 100% {
+        transform: scale(0.6);
+        opacity: 0.5;
+    }
+    40% {
+        transform: scale(1.0);
+        opacity: 1;
+    }
+}
 
 @media screen and (max-width: 600px) {
     .stats-grid {
