--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -152,7 +152,7 @@
         font-family: monospace;
         font-size: 0.9em;
         margin: 0 0.2rem;
-        border: 1px solid #4f4f4f; /* ADDED */
+        border: 1px solid #4f4f4f; 
     }
 
     .mark-item {
@@ -205,10 +205,11 @@
         /* justify-content: space-between; -- REMOVED */
         align-items: center;
         gap: 1rem;
-        padding: 0.2rem 0.5rem; /* ADDED */
-        border: 1px solid #4f4f4f; /* ADDED */
-        border-radius: 4px; /* ADDED */
-        background-color: #2a2a2a; /* ADDED */
+        padding: 0.2rem 0.5rem; 
+        border: 1px solid #4f4f4f; 
+        border-radius: 4px; 
+        background-color: #2a2a2a;
+        justify-content: space-between;
     }
 
     /* Experience Tab - Grid layout */
@@ -299,7 +300,7 @@
         .info-grid .talent-tag {
         font-size: 0.9em;
         margin: 0 0.2rem;
-        border: 1px solid #4f4f4f; /* ADDED */
+        border: 1px solid #4f4f4f; 
         }
 }
 </style>
@@ -381,7 +382,7 @@
 {{#each {{getvar::abl}} abil}}
 {{#when::{{dict_element::{{getvar::target}}::{{slot::abil}}}}::isnot::0}}
 <div class="abl-item"><span>{{slot::abil}}</span>
-<div class="star-rating" style="--rating: {{dict_element::{{getvar::target}}::{{slot::abil}}}}">
+<div class="rating heart {{#when::{{dict_element::{{getvar::target}}::{{slot::abil}}}}::is::10}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::{{slot::abil}}}}">
 </div></div>
 {{/when}}
 {{/each}}
@@ -443,11 +444,11 @@
 <section class="marks-section">
 <h2>* 각인</h2>
 <div class="marks-grid">
-<div class="mark-item"><span class="bar-label">고통:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::고통각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">쾌락:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::쾌락각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">복종:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::복종각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">치욕:</span> <div class="mark-rating" style="--rating: {{dict_element::{{getvar::target}}::치욕각인}}"></div></div>
-<div class="mark-item"><span class="bar-label">반발:</span> <div class="mark-rating neg" style="--rating: {{dict_element::{{getvar::target}}::반발각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">고통:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::고통각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::고통각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">쾌락:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::쾌락각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::쾌락각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">복종:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::복종각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::복종각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">치욕:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::치욕각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::치욕각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">반발:</span> <div class="rating mark neg {{#when::{{dict_element::{{getvar::target}}::반발각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::반발각인}}"></div></div>
 </div>
 </section>
 
