설정 페이지에 난이도 및 사망방지 설정 추가

--- a/Pages/congif/config.html
+++ b/Pages/congif/config.html
@@ -2,11 +2,11 @@
 <div class="container">
 <div class="line double"></div>
 
-<header class="game-header">
-<h1>▋설정</h1>
-
+<header class="header">
+<h1 style='text-align:left;border-bottom:solid 1px;width:100%;padding:1rem 0;margin:0;'>▋설정</h1>
 </header>
 <div class="command-container">
 {{getvar::cmds}}
+</div>
 </div>
 </body>
