--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -293,10 +293,9 @@ height: 0.6rem;
 <span class="v-bar-label">기력</span>
 </div>
 <!-- Vertical Ejaculation Bar -->
-<div class="v-bar-container" title="{{? {{getvar::ej_target}}*0.8}}">
+<div class="v-bar-container" title="{{getvar::ej_target}}/{{getvar::ej_target_max}}">
 <div class="v-bar-track">
-<!--최대 게이지를 80%까지만 채워서 가득 찼는데 절정하지 않는 모습을 피함-->
-<div class="v-bar-fill x-risu-ej" style="height: {{? {{? {{tonumber::{{getvar::ej_target}}}}*0.8}}/100}}%;"></div>
+<div class="v-bar-fill x-risu-ej" style="height: {{? {{tonumber::{{getvar::ej_target}}}}/{{tonumber{{getvar::ej_target_max}}}}}}%;"></div>
 </div>
 <span class="v-bar-label">절정</span>
 </div>
@@ -387,10 +386,9 @@ height: 0.6rem;
 <div class="x-risu-bar-container">
 <span class="bar-label">{{user}}:</span>
 <div class="progress-bar x-risu-ej">
-<!--최대 게이지를 80%까지만 채워서 가득 찼는데 절정하지 않는 모습을 피함-->
-<div class="x-risu-progress-bar-fill x-risu-ej" style="width: {{? {{? {{tonumber::{{getvar::ej_user}}}}*0.8}}/100}}%;"></div>
+<div class="x-risu-progress-bar-fill x-risu-ej" style="width: {{? {{tonumber::{{getvar::ej_user}}}}/{{tonumber::{{getvar::ej_user_max}}}}}}%;"></div>
 </div>
-<span class="bar-value">{{getvar::ej_user}}/10000</span>
+<span class="bar-value">{{getvar::ej_user}}/{{getvar::ej_user_max}}</span>
 </div>
 </section>
 
