조교 대성공과 실패시 로그창에 이펙트를 추가

--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -3,12 +3,9 @@
 height: 0.6rem;
 }
 
-
-
-/* MODIFIED: Target Profile Section */
 .target-profile {
     display: flex;
-    flex-wrap: wrap; /* ADDED for responsiveness */
+    flex-wrap: wrap;
     gap: 1rem;
     align-items: flex-start;
     background-color: #303030;
@@ -16,7 +13,6 @@ height: 0.6rem;
     border-radius: 4px;
 }
 
-/* NEW: Wrapper for portrait and bars */
 .target-visuals {
     display: flex;
     gap: 1rem;
@@ -38,8 +34,8 @@ height: 0.6rem;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    gap: 0.75rem; /* Space between header and details */
-    min-width: 280px; /* Helps determine wrapping point */
+    gap: 0.75rem;
+    min-width: 280px;
 }
 
 .target-header {
@@ -55,11 +51,10 @@ height: 0.6rem;
     font-size: 1.5em;
 }
 
-/* NEW: Vertical Bars */
 .vertical-bars {
     display: flex;
     gap: 0.75rem;
-    height: 128px; /* Match portrait height */
+    height: 128px;
     flex-shrink: 0;
 }
 .v-bar-container {
@@ -78,7 +73,7 @@ height: 0.6rem;
     padding: 2px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end; /* Align fill to bottom */
+    justify-content: flex-end;
 }
 .v-bar-fill {
     width: 100%;
@@ -93,8 +88,6 @@ height: 0.6rem;
 .v-bar-fill.x-risu-st { background-image: linear-gradient(to top, #ecd162, #f1c40f); }
 .v-bar-fill.x-risu-ej { background-image: linear-gradient(to top, #e06884, #ce025b); }
 
-
-/* NEW: Target Details Grid */
 .target-details-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
@@ -122,7 +115,6 @@ height: 0.6rem;
     font-size: 1.2em;
 }
 
-/* MODIFIED: Stats Section Header for Toggle */
 .stats-header {
     display: flex;
     /*justify-content: space-between;*/
@@ -139,7 +131,6 @@ height: 0.6rem;
 
 }
 
-/* NEW: Logic for showing/hiding stats */
 #stats-expanded:checked ~ .stats-header .expand-btn,
 #stats-collapsed:checked ~ .stats-header .collapse-btn {
     display: none;
@@ -200,7 +191,7 @@ height: 0.6rem;
 }
 
 .loading-container {
-    grid-column: 1 / -1; /* Span all columns in the command-container grid */
+    grid-column: 1 / -1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -209,7 +200,7 @@ height: 0.6rem;
     color: #ccc;
     font-family: 'Gulim', monospace;
     text-align: center;
-    min-height: 80px; /* Ensure it has some height */
+    min-height: 80px;
 }
 
 .loading-text {
@@ -225,7 +216,7 @@ height: 0.6rem;
 .loading-dots span {
     width: 12px;
     height: 12px;
-    background-color: #ffffbf; /* Using a highlight color from the theme */
+    background-color: #ffffbf;
     border-radius: 50%;
     animation: pulse 1.4s infinite ease-in-out both;
 }
@@ -248,6 +239,98 @@ height: 0.6rem;
         opacity: 1;
     }
 }
+
+/*성공여부표시 애니메이션*/
+.log-wrapper {
+position: relative; /* Container for the absolute positioned overlay */
+}
+
+.success-animation {
+position: absolute;
+inset: 0; /* a modern way for top/right/bottom/left: 0 */
+z-index: 10;
+overflow: hidden; /* Hide panels as they move out */
+animation: hide-container 0.1s 0.9s forwards;
+}
+
+/* The two black panels covering the content */
+.success-animation::before,
+.success-animation::after {
+content: '';
+position: absolute;
+top: 0;
+width: 50.5%; /* Overlap slightly to prevent a 1px gap during animation */
+height: 100%;
+background-color: #111; /* Match log background */
+animation: open-panels 0.6s ease-in-out 0.4s forwards;
+}
+
+.success-animation::before {
+left: 0;
+transform-origin: left;
+}
+
+.success-animation::after {
+right: 0;
+transform-origin: right;
+}
+
+.animation-text {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+
+font-size: 3em;
+font-weight: bold;
+font-family: 'Arial Black', sans-serif;
+
+z-index: 1; /* Above panels */
+white-space: nowrap; /* Prevent text wrapping */
+animation: text-appear-and-fade 1s ease-in-out forwards;
+}
+.success{
+    color: #f8c65c;
+    text-shadow: 0 0 10px #f8c65c, 0 0 20px #d1843c;
+}
+
+.fail{
+    color: #dc4747;
+    text-shadow: 0 0 10px #f8c65c, 0 0 20px #d1843c;
+}
+
+@keyframes text-appear-and-fade {
+0% {
+opacity: 0;
+transform: translate(-50%, -50%) scale(0.8);
+}
+5% { /* Appear */
+opacity: 1;
+transform: translate(-50%, -50%) scale(1);
+}
+100% { /* Fade out */
+opacity: 0;
+transform: translate(-50%, -50%) scale(1.1);
+}
+}
+
+@keyframes open-panels {
+from {
+transform: scaleX(1);
+}
+to {
+transform: scaleX(0);
+}
+}
+
+@keyframes hide-container {
+to {
+/* Hides the element and makes it non-interactive */
+visibility: hidden;
+}
+}
+/*성공여부표시 애니메이션*/
+
 
 @media screen and (max-width: 600px) {
     .stats-grid {
@@ -396,14 +479,21 @@ height: 0.6rem;
 
 <section class="log-panel">
 <h2>* 메시지</h2>
+<div class="log-wrapper">
 <div class="log-content">
-{{#when::{{? {{getvar::oldLog}}!=}}}}<details>
+{{#when::{{? {{getvar::oldLog}}!=""}}}}<details>
 <summary>이전 조교기록</summary>
 {{getvar::oldLog}}
 </details>
 {{/when}}
 {{getvar::newLog}}
 {{getvar::statLvUp}}
+</div>
+{{#when::{{? {{getvar::sucEffect}}!=""}}}}{{getvar::sucEffect}}{{/when}}
+<!-- 성공실패 예시
+<div class="success-animation"><div class="animation-text fail">실패</div></div>
+<div class="success-animation"><div class="animation-text success">대성공</div></div>
+-->
 </div>
 </section>
 
