공포각인 누락 수정

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -446,6 +446,7 @@
 <div class="marks-grid">
 <div class="mark-item"><span class="bar-label">고통:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::고통각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::고통각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">쾌락:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::쾌락각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::쾌락각인}}"></div></div>
+<div class="mark-item"><span class="bar-label">쾌락:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::공포각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::공포각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">복종:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::복종각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::복종각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">치욕:</span> <div class="rating mark {{#when::{{dict_element::{{getvar::target}}::치욕각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::치욕각인}}"></div></div>
 <div class="mark-item"><span class="bar-label">반발:</span> <div class="rating mark neg {{#when::{{dict_element::{{getvar::target}}::반발각인}}::is::3}}is-full{{/when}}" style="--rating: {{dict_element::{{getvar::target}}::반발각인}}"></div></div>
