변경된 juel 저장로직에 맞게 캐릭터 화면에서 juel이 조회되도록 수정

--- a/Pages/chars/charInfo.html
+++ b/Pages/chars/charInfo.html
@@ -459,8 +459,8 @@
 <h2>* 주얼</h2>
 <div class="jewel-grid">
 {{#each {{getvar::juelList}} juel}}
-{{#when::{{dict_element::{{getvar::target}}::{{slot::juel}}}}::isnot::0}}
-<div class="talent-tag"><strong>{{slot::juel}}:</strong> {{dict_element::{{getvar::target}}::{{slot::juel}}}}</div>
+{{#when::{{dict_element::{{getvar::targetJuel}}::{{slot::juel}}}}::isnot::0}}
+<div class="talent-tag"><strong>{{slot::juel}}:</strong> {{dict_element::{{getvar::targetJuel}}::{{slot::juel}}}}</div>
 {{/when}}
 {{/each}}
 </div>
