--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -481,7 +481,7 @@ visibility: hidden;
 <h2>* 메시지</h2>
 <div class="log-wrapper">
 <div class="log-content">
-{{#when::{{? {{getvar::oldLog}}!= }}}}<details>
+{{#when::{{? {{getvar::oldLog}}!=[조교시작]}}}}<details>
 <summary>이전 조교기록</summary>
 {{getvar::oldLog}}
 </details>
