--- a/Pages/train/train.html
+++ b/Pages/train/train.html
@@ -84,9 +84,10 @@ height: 0.6rem;
     font-size: 0.8em;
     font-weight: bold;
 }
-.v-bar-fill.x-risu-hp { background-image: linear-gradient(to top, #e46557, #eb1d1d); }
-.v-bar-fill.x-risu-st { background-image: linear-gradient(to top, #ecd162, #f1c40f); }
-.v-bar-fill.x-risu-ej { background-image: linear-gradient(to top, #e06884, #ce025b); }
+.v-bar-fill.x-risu-hp { background-image: linear-gradient(to top, #e46557, #eb1d1d); } /*체력*/
+.v-bar-fill.x-risu-st { background-image: linear-gradient(to top, #ecd162, #f1c40f); } /*기력*/
+.v-bar-fill.x-risu-pe { background-image: linear-gradient(to top, #ded5b0, #eed87f); } /*요의*/
+.v-bar-fill.x-risu-ej { background-image: linear-gradient(to top, #e06884, #ce025b); } /*사정게이지*/
 
 .target-details-grid {
     display: grid;
@@ -362,23 +363,30 @@ visibility: hidden;
 </div>
 <div class="vertical-bars">
 <!-- Vertical HP Bar -->
-<div class="v-bar-container" title="{{dict_element::{{getvar::target}}::체력}}">
+<div class="v-bar-container">
 <div class="v-bar-track">
 <div class="v-bar-fill x-risu-hp" style="height: {{? {{tonumber::{{dict_element::{{getvar::target}}::체력}}}} / {{tonumber::{{dict_element::{{getvar::target}}::최대체력}}}} * 100}}%;"></div>
 </div>
 <span class="v-bar-label">체력</span>
 </div>
 <!-- Vertical ST Bar -->
-<div class="v-bar-container" title="{{dict_element::{{getvar::target}}::최대기력}}">
+<div class="v-bar-container">
 <div class="v-bar-track">
 <div class="v-bar-fill x-risu-st" style="height: {{? {{tonumber::{{dict_element::{{getvar::target}}::기력}}}} / {{tonumber::{{dict_element::{{getvar::target}}::최대기력}}}} * 100}}%;"></div>
 </div>
 <span class="v-bar-label">기력</span>
 </div>
-<!-- Vertical Ejaculation Bar -->
-<div class="v-bar-container" title="{{getvar::ej_target}}/{{getvar::ej_target_max}}">
+<!-- Vertical Pee Bar -->
+<div class="v-bar-container">
 <div class="v-bar-track">
-<div class="v-bar-fill x-risu-ej" style="height: {{? {{tonumber::{{getvar::ej_target}}}}/{{tonumber{{getvar::ej_target_max}}}}}}%;"></div>
+<div class="v-bar-fill x-risu-pe" style="height: {{getvar::요의}}%;"></div>
+</div>
+<span class="v-bar-label">요의</span>
+</div>
+<!-- Vertical Ejaculation Bar -->
+<div class="v-bar-container" title="{{getvar::ej_target}}/{{? 10000*{{? 1.2^{{getvar::ejCount_t}}}}}}">
+<div class="v-bar-track">
+<div class="v-bar-fill x-risu-ej" style="height: {{? {{getvar::ej_target}}/{{? 100*{{? 1.2^{{getvar::ejCount_t}}}}}}}}%;"></div>
 </div>
 <span class="v-bar-label">절정</span>
 </div>
@@ -403,20 +411,8 @@ visibility: hidden;
 <span class="detail-value">{{dict_element::{{getvar::target}}::애널정액}}ml</span>
 </div>
 <div class="detail-item">
-<span class="detail-label">C절정</span>
-<span class="detail-value">{{dict_element::{{getvar::target}}::C쾌락경험}}회</span>
-</div>
-<div class="detail-item">
-<span class="detail-label">V절정</span>
-<span class="detail-value">{{dict_element::{{getvar::target}}::V쾌락경험}}회</span>
-</div>
-<div class="detail-item">
-<span class="detail-label">A절정</span>
-<span class="detail-value">{{dict_element::{{getvar::target}}::A쾌락경험}}회</span>
-</div>
-<div class="detail-item">
-<span class="detail-label">B절정</span>
-<span class="detail-value">{{dict_element::{{getvar::target}}::B쾌락경험}}회</span>
+<span class="detail-label">절정</span>
+<span class="detail-value">{{getvar::ejCount_t}}회</span>
 </div>
 </div>
 </div>
