조교중 hp부족시 사망/실신처리 적용

--- a/Pages/chars/charList.html
+++ b/Pages/chars/charList.html
@@ -2,7 +2,15 @@
 .x-risu-progress-bar{
 height: 0.3rem !important;
 }
-
+.사망{
+    background-color: #000;
+}
+.사망:hover{
+    background-color: #181818;
+}
+.사망 .char-condition{
+    color:#fff
+}
 
 </style>
 
